# TextGL

./: CMakeLists.txt  config.h  font-manager.c  main.cpp
Demo/: CMakeLists.txt  FontWidget.cpp  FontWidget.h  GLWidget.cpp  GLWidget.h  main.cpp
TextGL/: CMakeLists.txt  TCFont.h  TCFontTexture.h  TC_Font.h  TC_FontDB.h  TC_FontTexture.h  TC_GlyChar.h  TC_GlyText.h  TC_TextNode.h  tvec.h
TextGL/intern/: TCFont.cpp  TCFontTexture.cpp  TC_Font.cpp  TC_FontDB.cpp  TC_FontMatrix.cpp  TC_FontMatrix.h  TC_FontTexture.cpp  TC_GlyChar.cpp  TC_GlyText.cpp  TC_Library.cpp  TC_Library.h  TC_TextNode.cpp  TC_TextShader.cpp  TC_TextShader.h  TC_TextureCache.cpp  TC_TextureCache.h  TC_TextureSet.h  font-manager.c  font-manager.h  intern.cmake  markup.h  opengl.h  texture-atlas.c  texture-atlas.h  texture-atlas__.c  texture-font.c  texture-font.h  texture-font__.h  vec234.h  vector.c  vector.h
